Add history.html and some ui improvements

--- a/Practica1/history.html
+++ b/Practica1/history.html
@@ -45,9 +45,10 @@
         </div>
 
         <div class="content">         
+          
           <div id="search_div">
             <div id="search_field">
-              <input type="text" placeholder="Search" id="search_input">
+              <input type="text" placeholder="Search" value="Disney films" id="search_input">
               <input type="image" src="images/search.png" id="search_button">
             </div>
             <div class="dropdown" id="category_field">
@@ -66,43 +67,44 @@
             </div>
           </div>
 
-          <h3>Recommended</h3>
-          <ul class="film_list">
-            <li class="film_item">
-              <img class="film_item_img" src="./films/lion.jpg">
-              <div class="film_item_text">THE LION KING<br>12.99$</div>
+          <h3>History</h3>
+          <ul class="history_list">
+            <li class="history_item">
+              <img class="history_item_img" src="./films/lion.jpg">
+              <div class="history_item_info">
+                <div class="history_item_title">THE LION KING - 12.99$</div>
+                <div class="history_item_text">
+                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
+                  Order date: 21/9/2019 
+                </div>
+              </div>
+              <input class="history_item_button" type="submit" value="Cancel order">
             </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/interstelar.jpg">
-              <div class="film_item_text">INTERSTELLAR<br>24.99$</div>
-            </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/endgame.jpg">
-              <div class="film_item_text">AVENGERS: ENDGAME<br>10.99$</div>
-            </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/avatar.jpg">
-              <div class="film_item_text">AVATAR<br>10.99$</div>
-            </li>
-          </ul>
 
-          <h3>Best sellers</h3>
-          <ul class="film_list">
-            <li class="film_item">
-              <img class="film_item_img" src="./films/lion.jpg">
-              <div class="film_item_text">THE LION KING<br>12.99$</div>
+            <li class="history_item">
+              <img class="history_item_img" src="./films/interstelar.jpg">
+              <div class="history_item_info">
+                <div class="history_item_title">INTERSTELLAR - 24.99$</div>
+                <div class="history_item_text">
+                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
+                  Order date: 11/9/2019<br>
+                  Reception date: 25/9/2019
+                </div>
+              </div>
+              <input class="history_item_button" type="submit" value="Return order">
             </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/interstelar.jpg">
-              <div class="film_item_text">INTERSTELLAR<br>24.99$</div>
-            </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/endgame.jpg">
-              <div class="film_item_text">AVENGERS: ENDGAME<br>10.99$</div>
-            </li>
-            <li class="film_item">
-              <img class="film_item_img" src="./films/avatar.jpg">
-              <div class="film_item_text">AVATAR<br>10.99$</div>
+
+            <li class="history_item">
+              <img class="history_item_img" src="./films/avatar.jpg">
+              <div class="history_item_info">
+                <div class="history_item_title">AVATAR - 10.99$</div>
+                <div class="history_item_text">
+                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
+                  Order date: 2/8/2019<br>
+                  Reception date: 7/8/2019<br>
+                  You cannot return this order.
+                </div>
+              </div>
             </li>
           </ul>
           
