--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -30,17 +30,17 @@
       <div class="body">
         <div class="sidebar fixed">
           <ul>
-            <li>Special offers</li>
-            <li>Contact</li>
-            <li>About us</li>
+            <li><img src="./images/tag.png">Special offers</li>
+            <li><img src="./images/contact-mail.png">Contact</li>
+            <li><img src="./images/information.png">About us</li>
           </ul>
         </div>
 
         <div class="sidebar filler">
           <ul>
-            <li>Special offers</li>
-            <li>Contact</li>
-            <li>About us</li>
+            <li><img src="./images/tag.png">Special offers</li>
+            <li><img src="./images/contact-mail.png">Contact</li>
+            <li><img src="./images/information.png">About us</li>
           </ul>
         </div>
 
