--- a/Practica1/index_logged.html
+++ b/Practica1/index_logged.html
@@ -58,9 +58,9 @@
 
         <div class="sidebar filler">
           <ul>
-            <li>Special offers</li>
-            <li>Contact</li>
-            <li>About us</li>
+            <li><img src="./images/tag.png">Special offers</li>
+            <li><img src="./images/contact-mail.png">Contact</li>
+            <li><img src="./images/information.png">About us</li>
           </ul>
         </div>
 
