--- a/Practica1/register.html
+++ b/Practica1/register.html
@@ -29,18 +29,18 @@
   		
   		<div class="body">
   			<div class="sidebar fixed">
-  				<ul>
-  					<li>Special offers</li>
-  					<li>Contact</li>
-  					<li>About us</li>
-  				</ul>
-  			</div>
+          <ul>
+            <li><img src="./images/tag.png">Special offers</li>
+            <li><img src="./images/contact-mail.png">Contact</li>
+            <li><img src="./images/information.png">About us</li>
+          </ul>
+        </div>
 
         <div class="sidebar filler">
           <ul>
-            <li>Special offers</li>
-            <li>Contact</li>
-            <li>About us</li>
+            <li><img src="./images/tag.png">Special offers</li>
+            <li><img src="./images/contact-mail.png">Contact</li>
+            <li><img src="./images/information.png">About us</li>
           </ul>
         </div>
 
@@ -85,7 +85,7 @@
                 </div>
               </div>
 
-              <input class="regButton" "type="submit" value="Confirm">
+              <input class="regButton" type="submit" value="Confirm">
               
             </div>
           </div>
