Detail screen and fixes

--- a/Practica1/detail.html
+++ b/Practica1/detail.html
@@ -65,67 +65,70 @@
         </div>
 
         <div class="content">         
-          <div id="search_div">
-            <div id="search_field">
-              <input type="text" placeholder="Search" value="Disney films" id="search_input">
-              <input type="image" src="images/search.png" id="search_button">
+          <div id="detail">
+            <!-- Rectangle -->
+            <img id="filmImg" src="./details/interstellar.png">
+            <!-- image 2 -->
+            <div class="info">
+              <h2>Interstellar</h2>
+
+              <div class="mainContainer">
+                <div class="verInfoContainer">
+                  <div class="infoContainer">
+                    <h4>Director: </h4>
+                    <h5>Christopher Nolan</h5>
+                  </div>
+
+                  <div class="infoContainer">
+                    <h4>Year: </h4>
+                    <h5>2014</h5>
+                  </div>
+
+                  <div class="infoContainer">
+                    <h4>Duration: </h4>
+                    <h5>169 min</h5>
+                  </div>
+
+                  <div class="infoContainer">
+                    <h4>Genre: </h4>
+                    <h5>Science Fiction</h5>
+                  </div>
+
+                  <div class="infoContainer">
+                    <h4>Language: </h4>
+                    <h5>Spanish, English</h5>
+                  </div>
+
+                  <div class="verInfoContainerCenter">
+                    <h4>Starring: </h4>
+                    <h5>Matthew McConaughey,
+                      Anne Hathaway,
+                      Jessica Chastain,
+                      Bill Irwin,
+                      Ellen Burstyn,
+                      Michael Caine</h5>
+                  </div>
+
+                </div>
+
+                <div class="verInfoContainer">
+
+                  <div class="verInfoContainerCenter">
+                    <h4>Synopsis: </h4>
+                    <h5>A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</h5>
+                  </div>
+
+                  <div class="infoContainer">
+                    <h4>Price: </h4>
+                    <h5>24.99$</h5>
+                  </div>
+
+                  <input class="addButton" type="button" value="Add to Basket">
+
+                </div>
+              </div>
             </div>
-            <div class="dropdown" id="category_field">
-              <button class="dropbtn">Categories</button>
-              <div class="dropdown-content">
-                <a href="#">Action</a>
-                <a href="#">Adventure</a>
-                <a href="#">Comedy</a>
-                <a href="#">Crime</a>
-                <a href="#">Dramas</a>
-                <a href="#">Horror</a>
-                <a href="#">Musicals</a>
-                <a href="#">Science fiction</a>
-                <a href="#">Westerns</a>
-              </div>
-            </div>
-          </div>
-
-          <h3>History</h3>
-          <ul class="history_list">
-            <li class="history_item">
-              <img class="history_item_img" src="./films/lion.jpg">
-              <div class="history_item_info">
-                <div class="history_item_title">THE LION KING - 12.99$</div>
-                <div class="history_item_text">
-                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
-                  Order date: 21/9/2019 
-                </div>
-              </div>
-              <input class="history_item_button" type="submit" value="Cancel order">
-            </li>
-
-            <li class="history_item">
-              <img class="history_item_img" src="./films/interstelar.jpg">
-              <div class="history_item_info">
-                <div class="history_item_title">INTERSTELLAR - 24.99$</div>
-                <div class="history_item_text">
-                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
-                  Order date: 11/9/2019<br>
-                  Reception date: 25/9/2019
-                </div>
-              </div>
-              <input class="history_item_button" type="submit" value="Return order">
-            </li>
-
-            <li class="history_item">
-              <img class="history_item_img" src="./films/avatar.jpg">
-              <div class="history_item_info">
-                <div class="history_item_title">AVATAR - 10.99$</div>
-                <div class="history_item_text">
-                  Sent to: CWC8+Q9 Mountain View, California, EE. UU.<br>
-                  Order date: 2/8/2019<br>
-                  Reception date: 7/8/2019<br>
-                  You cannot return this order.
-                </div>
-              </div>
-            </li>
-          </ul>
+          </div>   
         </div>
       </div>
           
