--- a/Practica1/register.html
+++ b/Practica1/register.html
@@ -54,33 +54,33 @@
               <div class="verContainer">
                 <div class="horContainer">
                   <div class="TextTextbox">
-                    <div class="regText">Name:</div>
+                    <h4>Name:</h4>
                     <input class="regFNTextbox" type="text" name="Name">
                   </div>
 
                   <div class="TextTextbox">
-                    <div class="regText">Surname:</div>
+                    <h4>Surname:</h4>
                     <input class="regFNTextbox" type="text" name="Surname">
                   </div>
                 </div>
 
                 <div class="TextTextbox">
-                  <div class="regText">User Name:</div>
+                  <h4>User Name:</h4>
                   <input class="regTextbox" type="text" name="User Name">
                 </div>
 
                 <div class="TextTextbox">
-                  <div class="regText">E-mail:</div>
+                  <h4>E-mail:</h4>
                   <input class="regTextbox" type="text" name="E-mail">
                 </div>
 
                 <div class="TextTextbox">
-                  <div class="regText">Password:</div>
+                  <h4>Password:</h4>
                   <input class="regPass" type="password" name="Password">
                 </div>
 
                 <div class="TextTextbox">
-                  <div class="regText">Credit card:</div>
+                  <h4>Credit card:</h4>
                   <input class="regTextbox" type="text" name="Credit Card">
                 </div>
               </div>
