--- a/Practica1/detail.html
+++ b/Practica1/detail.html
@@ -1,153 +1,80 @@
 <!DOCTYPE HTML>
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
-      <link rel=StyleSheet href="css/auxil.css" title="propierties" >
+      <link rel=StyleSheet href="css/styles.css" title="propierties" >
       <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
+      <div id="detail">
+        <!-- Rectangle -->
+        <img id="filmImg" src="./Details/interstellar.png">
+        <!-- image 2 -->
+        <div class="info">
+          <h2>Interstellar</h2>
 
-      <header class="header fixed">
-       <h1 id="title">CDdede</h1>
-        <div class="user_div">
-          <div class="header_user_info">
-            <div class="header_user_name">Welcome User001</div>
-            <img class="header_user_icon" src="./images/user.png">
-          </div>
-
-          <div>
-            <!-- Logout -->
-            <div class="header_button">Logout</div>
-            <!-- History -->
-            <div class="header_button">History</div>
-            <!-- Basquet -->
-            <div class="header_button">Basquet</div>
-          </div>
-
-        </div>
-      </header>
-
-      <header class="header filler">
-        <h1 id="title">CDdede</h1>
-        <div class="user_div">
-          <div class="header_user_info">
-            <div class="header_user_name">Welcome User001</div>
-            <img class="header_user_icon" src="./images/facebook.png">
-          </div>
-
-          <div>
-            <!-- Logout -->
-            <div class="header_button">Logout</div>
-            <!-- History -->
-            <div class="header_button">History</div>
-            <!-- Basquet -->
-            <div class="header_button">Basquet</div>
-          </div>
-
-        </div>
-      </header>
-
-      <div class="body">
-        <div class="sidebar fixed">
-          <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
-          </ul>
-        </div>
-
-        <div class="sidebar filler">
-          <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
-          </ul>
-        </div>
-
-        <div class="content">
-          <div id="detail">
-            <!-- Rectangle -->
-            <img id="filmImg" src="./Details/interstellar.png">
-            <!-- image 2 -->
-            <div class="info">
-              <h2>Interstellar</h2>
-
-              <div class="mainContainer">
-                <div class="verInfoContainer">
-                  <div class="infoContainer">
-                    <h4>Director: </h4>
-                    <h5>Christopher Nolan</h5>
-                  </div>
-
-                  <div class="infoContainer">
-                    <h4>Year: </h4>
-                    <h5>2014</h5>
-                  </div>
-
-                  <div class="infoContainer">
-                    <h4>Duration: </h4>
-                    <h5>169 min</h5>
-                  </div>
-
-                  <div class="infoContainer">
-                    <h4>Genre: </h4>
-                    <h5>Science Fiction</h5>
-                  </div>
-
-                  <div class="infoContainer">
-                    <h4>Language: </h4>
-                    <h5>Spanish, English</h5>
-                  </div>
-
-                  <div class="verInfoContainer">
-                    <h4>Starring: </h4>
-                    <h5>Matthew McConaughey,
-                      Anne Hathaway,
-                      Jessica Chastain,
-                      Bill Irwin,
-                      Ellen Burstyn,
-                      Michael Caine</h5>
-                  </div>
-
-                </div>
-
-                <div class="verInfoContainer">
-
-                  <div class="verExpandableContainer">
-
-                    <div class="verInfoContainer">
-                      <h4>Synopsis: </h4>
-                      <h5>A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</h5>
-                    </div>
-
-                    <div class="infoContainer">
-                      <h4>Price: </h4>
-                      <h5>24.99$</h5>
-                    </div>
-
-                  </div>
-
-                  <div class="verButtonContainer">
-                    <input class="addButton" type="button" value="Add to Basket">
-                  </div>
-
-                </div>
+          <div class="mainContainer">
+            <div class="verInfoContainer">
+              <div class="infoContainer">
+                <h4>Director: </h4>
+                <h5>Christopher Nolan</h5>
               </div>
+
+              <div class="infoContainer">
+                <h4>Year: </h4>
+                <h5>2014</h5>
+              </div>
+
+              <div class="infoContainer">
+                <h4>Duration: </h4>
+                <h5>169 min</h5>
+              </div>
+
+              <div class="infoContainer">
+                <h4>Genre: </h4>
+                <h5>Science Fiction</h5>
+              </div>
+
+              <div class="infoContainer">
+                <h4>Language: </h4>
+                <h5>Spanish, English</h5>
+              </div>
+
+              <div class="verInfoContainer">
+                <h4>Starring: </h4>
+                <h5>Matthew McConaughey,
+                  Anne Hathaway,
+                  Jessica Chastain,
+                  Bill Irwin,
+                  Ellen Burstyn,
+                  Michael Caine</h5>
+              </div>
+
+            </div>
+
+            <div class="verInfoContainer">
+
+              <div class="verExpandableContainer">
+
+                <div class="verInfoContainer">
+                  <h4>Synopsis: </h4>
+                  <h5>A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</h5>
+                </div>
+
+                <div class="infoContainer">
+                  <h4>Price: </h4>
+                  <h5>24.99$</h5>
+                </div>
+
+              </div>
+
+              <div class="verButtonContainer">
+                <input class="addButton" type="button" value="Add to Basket">
+              </div>
+
             </div>
           </div>
         </div>
       </div>
-
-    <footer>
-      <ul>
-        <li><img class="social_icon" src="./images/facebook.png"></li>
-        <li><img class="social_icon" src="./images/instagram.png"></li>
-        <li><img class="social_icon" src="./images/twitter.png"></li>
-        <li><img class="social_icon" src="./images/youtube.png"></li>
-      </ul>
-
-      <p id='footer_text'>© 2019. CDdede. All rights reserved</p>
-    </footer>
-
     </body>
 </html>
