Little fix on history.html

--- a/Practica1/history.html
+++ b/Practica1/history.html
@@ -32,7 +32,7 @@
 
       <h3>History</h3>
       <ul class="history_list">
-        <a href="./details.html" target="content_iframe">
+        <a href="./detail.html" target="content_iframe">
           <li class="history_item">
             <img class="history_item_img" src="./films/lion.jpg">
             <div class="history_item_info">
@@ -46,7 +46,7 @@
           </li>
         </a>
 
-        <a href="./details.html" target="content_iframe">
+        <a href="./detail.html" target="content_iframe">
           <li class="history_item">
             <img class="history_item_img" src="./films/interstelar.jpg">
             <div class="history_item_info">
@@ -61,7 +61,7 @@
           </li>
         </a>
 
-        <a href="./details.html" target="content_iframe">
+        <a href="./detail.html" target="content_iframe">
           <li class="history_item">
             <img class="history_item_img" src="./films/avatar.jpg">
             <div class="history_item_info">
