Fix history and results lists

--- a/Practica1/history.html
+++ b/Practica1/history.html
@@ -34,8 +34,8 @@
 
       <h3>History</h3>
       <ul class="history_list">
-        <li>
-          <a href="./detail.html" target="content_iframe" class="history_item">
+        <li class="history_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">
             <img class="history_item_img" src="./films/lion.jpg" alt="The image could not be shown.">
             <div class="history_item_info">
               <div class="history_item_title">THE LION KING - 12.99$</div>
@@ -50,8 +50,8 @@
           </form>
         </li>
 
-        <li>
-          <a href="./detail.html" target="content_iframe" class="history_item">
+        <li class="history_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">
             <img class="history_item_img" src="./films/interstelar.jpg" alt="The image could not be shown">
             <div class="history_item_info">
               <div class="history_item_title">INTERSTELLAR - 24.99$</div>
@@ -67,8 +67,8 @@
           </form>
         </li>
 
-        <li>
-          <a href="./detail.html" target="content_iframe" class="history_item">
+        <li class="history_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">
             <img class="history_item_img" src="./films/avatar.jpg" alt="The image could not be shown.">
             <div class="history_item_info">
               <div class="history_item_title">AVATAR - 10.99$</div>
