--- a/Practica1/search.html
+++ b/Practica1/search.html
@@ -34,8 +34,8 @@
 
       <h3>Results</h3>
       <ul class="result_list">
-        <li>
-          <a href="./details.html" target="content_iframe" class="result_item">  
+        <li class="result_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">  
             <img class="result_item_img" src="./films/lion.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">THE LION KING - 12.99$</div>
@@ -46,8 +46,8 @@
           </a>
         </li>
 
-        <li>
-          <a href="./details.html" target="content_iframe" class="result_item">
+        <li class="result_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">
             <img class="result_item_img" src="./films/interstelar.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">INTERSTELLAR - 24.99$</div>
@@ -58,8 +58,8 @@
           </a>
         </li>
 
-        <li>
-          <a href="./details.html" target="content_iframe" class="result_item">
+        <li class="result_item">
+          <a href="./detail.html" target="content_iframe" class="list_a_item">
             <img class="result_item_img" src="./films/avatar.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">AVATAR - 10.99$</div>
