HTML5 style fixed

--- a/Practica1/detail.html
+++ b/Practica1/detail.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
+<html lang="en">
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
       <link rel=StyleSheet href="css/styles.css" title="propierties" >
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
       <div id="detail">
         <!-- Rectangle -->
-        <img id="filmImg" src="./Details/interstellar.png">
+        <img id="filmImg" src="./Details/interstellar.png" alt="The image could not be shown.">
         <!-- image 2 -->
         <div class="info">
           <h2>Interstellar</h2>
