--- a/Practica1/home.html
+++ b/Practica1/home.html
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
+<html lang="en">
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
       <link rel=StyleSheet href="css/styles.css" title="propierties" >
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
       <div id="search_div">
         <div id="search_field">
           <input type="text" placeholder="Search" id="search_input">
-          <a href="./search.html" target="content_iframe">
-            <input type="image" src="images/search.png" id="search_button">
-          </a>
+          <form action="./search.html" target="content_iframe">
+            <input type="image" src="images/search.png" id="search_button" alt="The icon could not be shown.">
+          </form>
         </div>
         <div class="dropdown" id="category_field">
           <button class="dropbtn">Categories</button>
@@ -33,25 +35,25 @@
       <ul class="film_list">
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/lion.jpg">
+            <img class="film_item_img" src="./films/lion.jpg" alt="The image could not be shown.">
             <div class="film_item_text">THE LION KING<br>12.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/interstelar.jpg">
+            <img class="film_item_img" src="./films/interstelar.jpg" alt="The image could not be shown.">
             <div class="film_item_text">INTERSTELLAR<br>24.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/endgame.jpg">
+            <img class="film_item_img" src="./films/endgame.jpg" alt="The image could not be shown.">
             <div class="film_item_text">AVENGERS: ENDGAME<br>10.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/avatar.jpg">
+            <img class="film_item_img" src="./films/avatar.jpg" alt="The image could not be shown.">
             <div class="film_item_text">AVATAR<br>10.99$</div>
           </a>
         </li>
@@ -61,25 +63,25 @@
       <ul class="film_list">
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/lion.jpg">
+            <img class="film_item_img" src="./films/lion.jpg" alt="The image could not be shown.">
             <div class="film_item_text">THE LION KING<br>12.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/interstelar.jpg">
+            <img class="film_item_img" src="./films/interstelar.jpg" alt="The image could not be shown.">
             <div class="film_item_text">INTERSTELLAR<br>24.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/endgame.jpg">
+            <img class="film_item_img" src="./films/endgame.jpg" alt="The image could not be shown.">
             <div class="film_item_text">AVENGERS: ENDGAME<br>10.99$</div>
           </a>
         </li>
         <li class="film_item">
           <a href="./detail.html" target="content_iframe">
-            <img class="film_item_img" src="./films/avatar.jpg">
+            <img class="film_item_img" src="./films/avatar.jpg" alt="The image could not be shown.">
             <div class="film_item_text">AVATAR<br>10.99$</div>
           </a>
         </li>
