--- a/Practica1/index_logged.html
+++ b/Practica1/index_logged.html
@@ -1,20 +1,22 @@
 <!DOCTYPE HTML>
+<html lang="en">
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
       <link rel=StyleSheet href="css/styles.css" title="propierties" >
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
 
       <header class="header fixed">
     	<a href="./home.html" target="content_iframe">
-    		<h1 id="title">CDdede</h1>
+    		<h1 class="title">CDdede</h1>
     	</a>
         <div class="user_div">
           <div class="header_user_info">
             <div class="header_user_name">Welcome User001</div>
-            <img class="header_user_icon" src="./images/user.png">
+            <img class="header_user_icon" src="./images/user.png" alt="The image could not be shown.">
           </div>
 
           <div>
@@ -34,11 +36,11 @@
       </header>
 
       <header class="header filler">
-        <h1 id="title">CDdede</h1>
+        <h1 class="title">CDdede</h1>
         <div class="user_div">
           <div class="header_user_info">
             <div class="header_user_name">Welcome User001</div>
-            <img class="header_user_icon" src="./images/facebook.png">
+            <img class="header_user_icon" src="./images/facebook.png" alt="The image could not be shown.">
           </div>
 
           <div>
@@ -56,17 +58,17 @@
       <div class="body">
         <div class="sidebar fixed">
           <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
+            <li><img src="./images/tag.png" alt="The image could not be shown.">Special offers</li>
+            <li><img src="./images/contact-mail.png" alt="The image could not be shown.">Contact</li>
+            <li><img src="./images/information.png" alt="The image could not be shown.">About us</li>
           </ul>
         </div>
 
         <div class="sidebar filler">
           <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
+            <li><img src="./images/tag.png" alt="The image could not be shown.">Special offers</li>
+            <li><img src="./images/contact-mail.png" alt="The image could not be shown.">Contact</li>
+            <li><img src="./images/information.png" alt="The image could not be shown.">About us</li>
           </ul>
         </div>
 
@@ -78,10 +80,10 @@
           
     <footer>
       <ul>
-        <li><img class="social_icon" src="./images/facebook.png"></li>
-        <li><img class="social_icon" src="./images/instagram.png"></li>
-        <li><img class="social_icon" src="./images/twitter.png"></li>
-        <li><img class="social_icon" src="./images/youtube.png"></li>
+        <li><img class="social_icon" src="./images/facebook.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/instagram.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/twitter.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/youtube.png" alt="The image could not be shown."></li>
       </ul>
 
       <p id='footer_text'>© 2019. CDdede. All rights reserved</p>
