--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
+<html lang="en">
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
       <link rel=StyleSheet href="css/styles.css" title="propierties" >
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
 
       <header class="header fixed">
         <a href="./home.html" target="content_iframe">
-          <h1 id="title">CDdede</h1>
+          <h1 class="title">CDdede</h1>
         </a>
         <div>
           <!-- Login -->
@@ -25,7 +27,7 @@
       </header>
 
       <header class="header filler">
-        <h1 id="title">CDdede</h1>
+        <h1 class="title">CDdede</h1>
         <div>
           <!-- Login -->
           <div class="header_button">Login</div>
@@ -37,17 +39,17 @@
       <div class="body">
         <div class="sidebar fixed">
           <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
+            <li><img src="./images/tag.png" alt="The image could not be shown.">Special offers</li>
+            <li><img src="./images/contact-mail.png" alt="The image could not be shown.">Contact</li>
+            <li><img src="./images/information.png" alt="The image could not be shown.">About us</li>
           </ul>
         </div>
 
         <div class="sidebar filler">
           <ul>
-            <li><img src="./images/tag.png">Special offers</li>
-            <li><img src="./images/contact-mail.png">Contact</li>
-            <li><img src="./images/information.png">About us</li>
+            <li><img src="./images/tag.png" alt="The image could not be shown.">Special offers</li>
+            <li><img src="./images/contact-mail.png" alt="The image could not be shown.">Contact</li>
+            <li><img src="./images/information.png" alt="The image could not be shown.">About us</li>
           </ul>
         </div>
 
@@ -60,10 +62,10 @@
 
     <footer>
       <ul>
-        <li><img class="social_icon" src="./images/facebook.png"></li>
-        <li><img class="social_icon" src="./images/instagram.png"></li>
-        <li><img class="social_icon" src="./images/twitter.png"></li>
-        <li><img class="social_icon" src="./images/youtube.png"></li>
+        <li><img class="social_icon" src="./images/facebook.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/instagram.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/twitter.png" alt="The image could not be shown."></li>
+        <li><img class="social_icon" src="./images/youtube.png" alt="The image could not be shown."></li>
       </ul>
 
       <p id='footer_text'>© 2019. CDdede. All rights reserved</p>
