--- a/Practica1/search.html
+++ b/Practica1/search.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
+<html lang ="en">
     <head>
       <meta charset="utf-8"> <!-- Carácteres españoles -->
       <link rel=StyleSheet href="css/styles.css" title="propierties" >
-      <link href="https://fonts.googleapis.com/css?family=Crete+Round|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
       <title>CDdede</title>
     </head>
     <body>
@@ -10,9 +12,9 @@
       <div id="search_div">
         <div id="search_field">
           <input type="text" placeholder="Search" value="Disney films" id="search_input">
-          <a href="./search.html" target="content_iframe">
-            <input type="image" src="images/search.png" id="search_button">
-          </a>
+          <form action="./search.html" target="content_iframe">
+            <input type="image" src="images/search.png" id="search_button" alt="The image could not be shown.">
+          </form>
         </div>
         <div class="dropdown" id="category_field">
           <button class="dropbtn">Categories</button>
@@ -32,42 +34,41 @@
 
       <h3>Results</h3>
       <ul class="result_list">
-        <a href="./details.html" target="content_iframe">
-          <li class="result_item">
-            <img class="result_item_img" src="./films/lion.jpg">
+        <li>
+          <a href="./details.html" target="content_iframe" class="result_item">  
+            <img class="result_item_img" src="./films/lion.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">THE LION KING - 12.99$</div>
               <div class="result_item_text">
                 This Disney animated feature follows the adventures of the young lion Simba, the heir of his father, Mufasa. Simba's wicked uncle, Scar, plots to usurp Mufasa's throne by luring father and son into a stampede of wildebeests. But Simba escapes, and only Mufasa is killed. Simba returns as an adult to take back his homeland from Scar with the help of his friends Timon and Pumbaa. 
               </div>
-            </div>
-          </li>
-        </a>
+            </div> 
+          </a>
+        </li>
 
-        <a href="./details.html" target="content_iframe">
-          <li class="result_item">
-            <img class="result_item_img" src="./films/interstelar.jpg">
+        <li>
+          <a href="./details.html" target="content_iframe" class="result_item">
+            <img class="result_item_img" src="./films/interstelar.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">INTERSTELLAR - 24.99$</div>
               <div class="result_item_text">
                 Earth's future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankind's survival: Interstellar travel. A newly discovered wormhole in the far reaches of our solar system allows a team of astronauts to go where no man has gone before, a planet that may have the right environment to sustain human life.
               </div>
             </div>
-          </li>
-        </a>
+          </a>
+        </li>
 
-        <a href="./details.html" target="content_iframe">
-          <li class="result_item">
-            <img class="result_item_img" src="./films/avatar.jpg">
+        <li>
+          <a href="./details.html" target="content_iframe" class="result_item">
+            <img class="result_item_img" src="./films/avatar.jpg" alt="The image could not be shown.">
             <div>
               <div class="result_item_title">AVATAR - 10.99$</div>
               <div class="result_item_text">
                 On the lush alien world of Pandora live the Na'vi, beings who appear primitive but are highly evolved. Because the planet's environment is poisonous, human/Na'vi hybrids, called Avatars, must link to human minds to allow for free movement on Pandora. Jake Sully, a paralyzed former Marine, becomes mobile again through one such Avatar and falls in love with a Na'vi woman. As a bond with her grows, he is drawn into a battle for the survival of her world.
               </div>
             </div>
-          </li>
-        </a>
+          </a>
+        </li>
       </ul>
-
     </body>
 </html>
